freelancer/src/main/fabric8/freelancer-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    provider: fabric8
    project: freelancer
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: freelancer
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: freelancer
